src/Oro/Bundle/ProductBundle/Resources/public/default/scss/components/product-view-attributes.scss
.product-view {
    &__attributes {
        margin-bottom: $offset-y;

        border: 1px solid $product-view-attributes-tabs-border-color;

        border-radius: $product-view-attributes-tabs-border-radius;

        .nav-tabs {
            display: flex;

            background: $product-view-attributes-tabs-bg;
            border-bottom-color: $product-view-attributes-tabs-border-color;

            border-top-left-radius: $product-view-attributes-tabs-border-radius;
            border-top-right-radius: $product-view-attributes-tabs-border-radius;
        }
        
        .nav-item {
            text-align: center;

            flex-grow: 1;

            & + .nav-item {
                margin-left: 0;

                border-left: 1px solid $product-view-attributes-tabs-border-color;
            }

            &:first-child {
                .nav-link {
                    border-top-left-radius: $product-view-attributes-tabs-border-radius;
                }
            }

            &:last-child {
                .nav-link {
                    border-top-right-radius: $product-view-attributes-tabs-border-radius;
                }
            }
        }

        .nav-link {
            padding: $product-view-attributes-tab-link-offset-inner;

            text-transform: uppercase;

            color: $product-view-attributes-tab-link-color;
            border: 0;

            border-radius: 0;

            @include hover-focus {
                background: none;
            }
        }

        .tab-content {
            padding: $product-view-attributes-tab-content-offset-inner;
        }
    }
}

